kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
spec:
  type: NodePort
  selector:
    app: catalog
  ports:
  - port: 9320
---
apiVersion: v1
kind: Service
metadata:
  name: envoy-service
spec:
  type: LoadBalancer
  selector:
    app: envoy
  ports:
  - port: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-deployment
spec:
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
      - name: catalog
        image: gcr.io/clubrockets/avninv/catalog:0.0.2
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 9320
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-deployment
spec:
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
      - name: envoy
        image: gcr.io/clubrockets/avninv/envoy:0.0.2
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081
